# docs/swagger.json
@@ -52,6 +52,12 @@
                         "description": "Comma-separated list of pool IDs to fetch, e.g., '1,2,3'",
                         "name": "IDs",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Minimum pool liquidity cap",
+                        "name": "min_liquidity_cap",
+                        "in": "query"
                     }
                 ],
                 "responses": {
